<resources>
    <string name="app_name">AndroidInternshipPart3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="loginField">Login</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="submit">Submit</string>
    <string name="hello">Hello</string>
    <string name="users">Users</string>
    <string name="first_test">First Test</string>
    <string name="second_test">Second Test</string>
    <string name="third_test">Third Test</string>
    <string name="first_test_access">access to the first test</string>
    <string name="access_to_the_second_test">access to the second test</string>
    <string name="access_to_the_third_test">access to the third test</string>
    <string name="role">Select role:</string>
    <string name="user">User</string>
    <string name="manager">Manager</string>
    <string name="user_list_test_1">List of users with access to the test</string>
    <string name="hello_user">Hello, user</string>
    <string name="test_number_one">Test number one</string>
    <string name="test_number_two">Test number two</string>
    <string name="test_number_three">Test number three</string>
    <string name="hello_admin">Hello, admin</string>
    <string name="user_list">User list:</string>
    <string name="you_score">Score:</string>
    <string name="percent_answers">Correct answers percent:</string>
    <string name="see_result">Results</string>
    <string name="exit">Exit</string>
    <string name="test_complit">Congratulations, you have completed the test</string>
    <string name="ok">OK</string>
    <string name="test_passed">Tests passed:</string>
    <string name="hello_manager">Hello, manager</string>
</resources>