<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>

        <variable
            name="adminViewModel"
            type="com.example.androidinternshippart3.admin.AdminViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".admin.AdminFragment">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:onClick="@{() -> adminViewModel.setValueToLogin()}"
            android:src="@drawable/left_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/hello_admin"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonThirdTest"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@color/teal_700"
            android:onClick="@{() -> adminViewModel.setValueToThirdTest()}"
            android:text="@string/third_test"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSecondTest" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSecondTest"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@color/teal_700"
            android:onClick="@{()-> adminViewModel.setValueToSecondTest()}"
            android:text="@string/second_test"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFirstTest" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUsers"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="40dp"
            android:background="@color/teal_200"
            android:onClick="@{() -> adminViewModel.setValueToUsers()}"
            android:text="@string/users"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFirstTest"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@color/teal_700"
            android:onClick="@{() -> adminViewModel.setValueToFirstTest()}"
            android:text="@string/first_test"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonUsers" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
