<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>

        <variable
            name="userViewModel"
            type="com.example.androidinternshippart3.user.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.UserFragment">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:onClick="@{() -> userViewModel.setEventValue()}"
            android:src="@drawable/left_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@{ userViewModel.userModel.helloUser}"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testNumberOne"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:background="@color/teal_700"
            android:onClick="@{() -> userViewModel.navigateToFirstTest()}"
            android:text="@string/test_number_one"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testNumberTwo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/teal_700"
            android:onClick="@{()->userViewModel.navigateToSecondTest()}"
            android:text="@string/test_number_two"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testNumberOne" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testNumberThree"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/teal_700"
            android:onClick="@{()->userViewModel.navigateToThirdTest()}"
            android:text="@string/test_number_three"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testNumberTwo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resultButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@color/teal_200"
            android:onClick="@{()->userViewModel.navigateToResults()}"
            android:text="@string/see_result"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testNumberThree" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
